vignette updated / small bug fix in assigning defaults

--- a/vignettes/ttree.Rmd
+++ b/vignettes/ttree.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Visualisation of transmission trees using epicontacts"
+title: "Visualisation of timed transmission trees using epicontacts"
 date: "`r Sys.Date()`"
 output: 
     rmarkdown::html_vignette:
@@ -20,51 +20,14 @@ opts_chunk$set(message=FALSE, warning=FALSE, eval=TRUE, echo=TRUE)
 
 Visualising chains of transmission in an infectious disease outbreak can provide
 a useful overview of the situation and help guide interventions. This vignette
-illustrates how the `epicontacts` package can be used to create dynamic transmission 
-chain visualisations like the one below:
+illustrates how the `epicontacts` package can be used to create interactive
+transmission chain visualisations that display time on the x-axis, like the one
+below:
 
 ```{r, echo = FALSE}
 library(viridis)
 library(ggplot2)
 library(epicontacts)
-## Simulate outbreak and return epicontacts object
-sim_epicontacts <- function(R0 = 2, gentime_mu = 15, gentime_sd = 8) {
-
-	## create generation time distribution
-	param <- epitrix::gamma_mucv2shapescale(gentime_mu, gentime_sd/gentime_mu)
-	dist <- distcrete::distcrete('gamma', 1, shape = param$shape, scale = param$scale)
-	gentime <- dist$d(1:40)
-	
-	## simulate outbreak
-	sim <- outbreaker::simOutbreak(R0 = R0, 
-																 infec.curve = gentime, 
-																 duration = 50,
-																 n = 50,
-																 rate.import.case = 0.2)
-	
-	## create anonymised case ID
-	case_ID <- replicate(sim$n, paste0(sample(c(0:9, letters), 5, TRUE), collapse = ''))
-	
-	## create linelist with simulated metadata
-	linelist <- data.frame(id = case_ID[sim$id],
-	                       onset = as.Date(sim$onset, origin = "2012-07-02"),
-	                       sex = sample(c("male", "female"), sim$n, TRUE),
-	                       age = round(runif(sim$n, 0, 70), 1),
-	                       outcome = sample(c("alive", "dead", "unknown"), sim$n, TRUE))
-	
-	contacts <- data.frame(from = case_ID[match(sim$ances, sim$id)], 
-												 to = case_ID[sim$id])
-	contacts$status <- sample(c("confirmed", "suspected"), nrow(contacts), TRUE)
-	contacts$duration <- runif(nrow(contacts), 0, 20)
-	## contact happened 0-10 days before start of symptom onset
-	t_onset <- linelist$onset[match(contacts$to, linelist$id)]
-	contacts$date <- t_onset - floor(runif(nrow(contacts), 0, 10))
-	
-	x <- make_epicontacts(linelist, contacts)
-
-	return(x)
-	
-}
 
 data(package = 'epicontacts')
 sim$directed <- TRUE
@@ -90,10 +53,17 @@ plot(sim,
 
 ## Creating an epicontacts object
 
-We begin with an `epicontacts` object, which consists of a linelist dataframe (specifying case IDs and any available case metadata) and a contacts dataframe (specifying pairs of IDs that have been in contact and any available properties of these contacts). For a detailed introduction to the `epicontacts` class, see the [overview vignette](epicontacts.html).
+We begin with an `epicontacts` object, which consists of a linelist dataframe
+(specifying case IDs and any available case metadata) and a contacts dataframe
+(specifying pairs of IDs that have been in contact and any available properties
+of these contacts). For a detailed introduction to the `epicontacts` class, see
+the [overview vignette](epicontacts.html).
 
-For this vignette, we will use a simulated outbreak as an example dataset. The linelist dataframe contains anonymised case IDs, dates
-of symptom onset, age, sex and outcome for each case. The contacts dataframe specifies the infector and infectee in the `from` and `to` columns, respectively, as well as the contact status (suspected or confirmed), duration of contact and date of first contact.
+For this vignette, we will use a simulated outbreak as an example dataset. The
+linelist dataframe contains anonymised case IDs, dates of symptom onset, age,
+sex and outcome for each case. The contacts dataframe specifies the infector and
+infectee in the `from` and `to` columns, respectively, as well as the contact
+status (suspected or confirmed), duration of contact and date of first contact.
 
 Below is an overview of the outbreak data as an `epicontacts` object.
 
@@ -102,12 +72,12 @@ sim
 ```
 
 
-## Interactive transmission tree visualisation
+## Basic plotting
 
-We can then create a dynamic and interactive visualise of these transmission
-chains using the `plot` function. We specify that we want to visualise our network
-as a transmission tree using the `method` argument, and indicate which column in our 
-linelistp should be used for the x-axis (in this case, the date of symptom onset).
+We can then visualise of these transmission chains using the `plot` function. We
+specify that we want to visualise our network as a transmission tree using the
+`method` argument, and indicate which column in our linelistp should be used for
+the x-axis (in this case, the date of symptom onset).
 
 ```{r}
 plot(sim, method = 'ttree', x_axis = 'onset')
