small bug fixes

--- a/vignettes/ttree.Rmd
+++ b/vignettes/ttree.Rmd
@@ -377,7 +377,7 @@ plot(sim_2,
      reverse_node_order = FALSE,
      reverse_root_order = TRUE,
      node_color = 'sex',
-     col_pal = my_func,
+#     col_pal = my_func,
      node_size = 'R_i',
      size_range = c(3, 8),
      edge_linetype = 'status',
