--- a/vignettes/ttree.Rmd
+++ b/vignettes/ttree.Rmd
@@ -37,7 +37,7 @@ plot(sim,
      x_axis = 'onset',
 #     legend = FALSE,
      ttree_shape = 'rectangle',
-     root_order = 'size',
+     root_order = 'subtree_size',
      node_order = 'onset',
      node_size = 'R_i',
      node_color = 'sex',
@@ -98,7 +98,7 @@ Node color, node shape and node size can be mapped to a given column in the line
 using the `node_color`, `node_shape` and `node_size` arguments. Two additional node attributes
 are calculated for each case that may be of interest, and can be also mapped. `R_i` is 
 describes the individual reproductive number for each case (i.e. the number of infections 
-caused by each case), and `size` is the total number of downstream cases (i.e the size of the
+caused by each case), and `subtree_size` is the total number of downstream cases (i.e the size of the
 cluster with that case as an ancestor). For example:
 
 ```{r}
@@ -156,7 +156,7 @@ vertically order cases connected to the same infector. Similarly, the vertical o
 roots of each transmission chain (i.e. the index case of each chain) is specified using the 
 `root_order` argument. The ordering can be reversed using the `reverse_node_order` and 
 `reverse_root_order` arguments. Below is a tree with roots ordered by date of onset, 
-(`root_order = "onset"`) and internal nodes ordered by downstream clust size (`node_order = "size"`).
+(`root_order = "onset"`) and internal nodes ordered by subtree size (`node_order = "subtree_size"`).
 
 ```{r}
 plot(sim, 
@@ -164,7 +164,7 @@ plot(sim,
      x_axis = 'onset',
      ttree_shape = 'rectangle',
      root_order = 'onset',
-     node_order = 'size',
+     node_order = 'subtree_size',
      reverse_node_order = FALSE,
      reverse_root_order = TRUE,
      node_color = 'sex',
@@ -184,7 +184,7 @@ plot(sim,
      x_axis = 'onset',
      ttree_shape = 'rectangle',
      root_order = 'onset',
-     node_order = 'size',
+     node_order = 'subtree_size',
      reverse_node_order = FALSE,
      reverse_root_order = TRUE,
      node_color = 'sex',
@@ -207,7 +207,7 @@ plot(sim,
      x_axis = 'onset',
      ttree_shape = 'rectangle',
      root_order = 'onset',
-     node_order = 'size',
+     node_order = 'subtree_size',
      reverse_node_order = FALSE,
      reverse_root_order = TRUE,
      node_color = 'sex',
@@ -251,7 +251,7 @@ plot(sim,
      x_axis = 'onset',
      ttree_shape = 'rectangle',
      root_order = 'onset',
-     node_order = 'size',
+     node_order = 'subtree_size',
      reverse_node_order = FALSE,
      reverse_root_order = TRUE,
      node_color = 'sex',
@@ -277,7 +277,7 @@ plot(sim,
      x_axis = 'onset',
      ttree_shape = 'branching',
      root_order = 'onset',
-     node_order = 'size',
+     node_order = 'subtree_size',
      reverse_node_order = FALSE,
      reverse_root_order = TRUE,
      node_color = 'sex',
@@ -301,7 +301,7 @@ plot(sim,
      x_axis = 'onset',
      ttree_shape = 'branching',
      root_order = 'onset',
-     node_order = 'size',
+     node_order = 'subtree_size',
      reverse_node_order = FALSE,
      reverse_root_order = TRUE,
      node_color = 'sex',
@@ -331,7 +331,7 @@ plot(sim,
      x_axis = 'onset',
      ttree_shape = 'rectangle',
      root_order = 'onset',
-     node_order = 'size',
+     node_order = 'subtree_size',
      reverse_node_order = FALSE,
      reverse_root_order = TRUE,
      node_color = 'sex',
@@ -354,7 +354,7 @@ plot(sim,
      x_axis = 'onset',
      ttree_shape = 'rectangle',
      root_order = 'onset',
-     node_order = 'size',
+     node_order = 'subtree_size',
      reverse_node_order = FALSE,
      reverse_root_order = TRUE,
      node_color = 'sex',
@@ -389,7 +389,7 @@ plot(sim_2,
      x_axis = 'onset',
      ttree_shape = 'rectangle',
      root_order = 'onset',
-     node_order = 'size',
+     node_order = 'subtree_size',
      reverse_node_order = FALSE,
      reverse_root_order = TRUE,
      node_color = 'sex',
@@ -416,7 +416,7 @@ plot(sim_2_clean,
      x_axis = 'onset',
      ttree_shape = 'rectangle',
      root_order = 'onset',
-     node_order = 'size',
+     node_order = 'subtree_size',
      reverse_node_order = FALSE,
      reverse_root_order = TRUE,
      node_color = 'sex',
@@ -461,7 +461,7 @@ plot(sim_3,
      x_axis = 'onset',
      ttree_shape = 'rectangle',
      root_order = 'onset',
-     node_order = 'size',
+     node_order = 'subtree_size',
      reverse_node_order = FALSE,
      reverse_root_order = TRUE,
      node_color = 'sex',
@@ -488,7 +488,7 @@ plot(sim_3,
      x_axis = 'onset',
      ttree_shape = 'rectangle',
      root_order = 'onset',
-     node_order = 'size',
+     node_order = 'subtree_size',
      reverse_node_order = FALSE,
      reverse_root_order = TRUE,
      node_color = 'sex',
