--- a/README.Rmd
+++ b/README.Rmd
@@ -259,4 +259,4 @@ Contributions are welcome via **pull requests**.
 
 Please note that this project is released with a [Contributor Code of Conduct](CONDUCT.md). By participating in this project you agree to abide by its terms.
 
-**Maintainer:** VP Nagraj (vpnagraj@virginia.edu)
+**Maintainer:** Finlay Campbell (f.campbell15@imperial)
